--- a/statistics.html
+++ b/statistics.html
@@ -59,7 +59,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juullabs/jobs/1796812'>Job Application for Statistical Programmer  at JUUL Labs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1796812'>Job Application for Statistical Programmer  at JUUL Labs</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -129,7 +129,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692155445-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692155445-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -201,7 +201,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tempus/jobs/4362032002'>Job Application for Statistical Geneticist at Tempus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4362032002'>Job Application for Statistical Geneticist at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -229,7 +229,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oyrAafwt'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oyrAafwt'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -249,7 +249,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -303,7 +303,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Jul 5, 2019 ... Apply online for the job of Biostatistician at Statistics & Data Corporation (SDC)</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/63990'>Principal Statistician - Medtronic Careers</a></h5> 
+<h5><a href='https://medtronic.referrals.selectminds.com/jobs/63990'>Principal Statistician - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Careers That Change Lives The Principal Statistician will be responsible for 
 statistical aspects of study design and analysis of data from complex...</p>
@@ -378,7 +378,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p>Jul 9, 2019 ... Celerion is looking for a Biostatistician to join our global Data Management and 
 Biometrics team in Belfast, Northern Ireland. This role is responsible for the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ultragenyx/14c02ece-2b6f-47be-8c7d-db186ea05893'>Ultragenyx Pharmaceutical Inc. - Associate Director, Biostatistics</a></h5> 
+<h5><a href='https://jobs.lever.co/ultragenyx/14c02ece-2b6f-47be-8c7d-db186ea05893'>Ultragenyx Pharmaceutical Inc. - Associate Director, Biostatistics</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -398,7 +398,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/5BB61A45C8'>Statistics &amp; Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/5BB61A45C8'>Statistics &amp; Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
